# fragmentbox

./: .gitignore  AGENTS.md  CLAUDE.md  README-ja.md  README.md  SPEC.md  config.toml  fragmentbox.py  pyproject.toml  requirements.txt  spec_post.md  spec_viewer.md  test_fragmentbox.py  test_viewer.py  viewer.html  viewer.py
css/: viewer.css
