[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fragmentbox"
version = "0.1.0"
description = "テキストフラグメント（アイデアの断片）をローカルのインボックスに素早く投入・閲覧するパーソナルツール"
requires-python = ">=3.12"
dependencies = [
    "trafilatura==2.0.0",
    "yt-dlp==2026.3.3",
    "fastapi==0.135.1",
    "uvicorn==0.41.0",
    "PySide6>=6.7",
    "pyvips>=2.2",
]

[project.scripts]
fragmentbox = "fragmentbox:main"
fragmentbox-viewer = "viewer:main"
